--- a/src/components/Activities/Activities.css
+++ b/src/components/Activities/Activities.css
@@ -1,6 +1,6 @@
 .activities-wrapper {
   margin: 70px 50px;
-  border: 3px solid green;
+  /* border: 3px solid green; */
   /* padding-left: 40px; */
 }
 .activities-wrapper h2 img {
@@ -13,5 +13,6 @@
 .activities-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* margin: 0 5%; */
+  gap: 20px;
+  /* text-align: center; */
 }
