--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -1,7 +1,15 @@
 .activity {
-  /* text-align: left; */
+  background-color: whitesmoke;
+  border: 1px solid rgb(235, 232, 232);
+  border-radius: 10px;
+  width: 230px;
+  padding: 15px;
 }
 
 .activity img {
-  width: 200px;
+  width: 100%;
+  /* padding: 10px; */
+}
+.activity button {
+  width: 100%;
 }
