local storage save added

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,26 +1,25 @@
 .dashboard {
   /* border: 3px solid orange; */
   padding: 0 20px;
-  /* background-color: rgba(255, 153, 0, 0.3); */
   background-color: whitesmoke;
+  /* background-color: rgba(255, 153, 0, 0.3); */
 }
 .dashboard > h4 {
   margin-top: 35px;
 }
 
 .user-info {
-  /* background-color: wheat; */
-  background-color: white;
+  background-color: wheat;
   border-radius: 10px;
   padding: 10px;
   display: flex;
   justify-content: space-around;
 }
 .break-container {
-  /* background-color: wheat; */
-  background-color: white;
+  background-color: wheat;
   border-radius: 20px;
   padding: 20px;
+  padding-left: 28px;
 }
 .break-container button {
   border: none;
@@ -28,6 +27,7 @@
   padding: 10px;
   margin: 5px;
   margin-bottom: 10px;
+  box-shadow: 0 0 5px 1px darkgrey;
 }
 
 .break-container button:hover {
@@ -39,8 +39,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* background-color: wheat; */
-  background-color: white;
+  background-color: wheat;
+  /* background-color: white; */
   border-radius: 20px;
   padding: 15px;
 }
