--- a/src/components/Activities/Activities.css
+++ b/src/components/Activities/Activities.css
@@ -1,7 +1,5 @@
 .activities-wrapper {
   margin: 70px 50px;
-  /* border: 3px solid green; */
-  /* padding-left: 40px; */
 }
 .activities-wrapper h2 img {
   width: 36px;
@@ -14,5 +12,25 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  /* text-align: center; */
+}
+
+/* Low Resolution PC */
+@media only screen and (min-width: 993px) and (max-width: 1100px) {
+  .activities-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+/* Tablet Devices */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .activities-container {
+    grid-template-columns: 1fr;
+    margin-left: 40px;
+  }
+}
+/* Mobile Devices */
+@media only screen and (max-width: 767px) {
+  .activities-container {
+    grid-template-columns: 1fr;
+    margin-left: 20px;
+  }
 }
