--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,8 +1,8 @@
 .dashboard {
-  /* border: 3px solid orange; */
   padding: 0 20px;
   background-color: whitesmoke;
-  /* background-color: rgba(255, 153, 0, 0.3); */
+  height: fit-content;
+  border-radius: 0 0 10px 10px;
 }
 .dashboard > h4 {
   margin-top: 35px;
@@ -40,7 +40,6 @@
   justify-content: space-around;
   align-items: center;
   background-color: wheat;
-  /* background-color: white; */
   border-radius: 20px;
   padding: 15px;
 }
@@ -49,5 +48,5 @@
   font-weight: 500;
 }
 .btn-complete {
-  margin: 10px 20%;
+  margin: 10px 20% 40px;
 }
